--- a/app/src/main/res/layout/fragment_subredditlist.xml
+++ b/app/src/main/res/layout/fragment_subredditlist.xml
@@ -3,11 +3,13 @@
     android:layout_height="match_parent"
     tools:context=".view.fragment.SubredditFeedFragment">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/feed_recyclerview"
-        android:scrollbars="vertical"
+    <ListView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:id="@+id/listview_feed"
+        android:choiceMode="singleChoice"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 
 </RelativeLayout>
